--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Whatsapp Clone</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="item1">Mis contactos</string>
+    <string name="item2">Mi perfil</string>
+    <string name="item3">Cerrar sesion</string>
 </resources>
