--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item1">Mis contactos</string>
     <string name="item2">Mi perfil</string>
-    <string name="item3">Cerrar sesion</string>
+    <string name="item3">Crear Grupos</string>
+    <string name="item4">Cerrar sesion</string>
 </resources>
